# class_lunch_ordering_system

./: .env.example  .gitignore  index.html
assets/: index-A7GPdkCe.css  index-B3tQslBk.js  index-B7JHiGHf.css  index-B8wkhHPT.js  index-BCubJYEl.css  index-BHGT71lG.js  index-Bd-T7dRH.css  index-BruU5rhk.css  index-C6zeR5ts.css  index-COcYQk-9.js  index-CWxbgc7q.js  index-D5-vimXq.css  index-D6VVVz4Z.js  index-DCsPLu_P.js  index-DS8FdcE5.js  index-DTJJ-rdJ.js
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/auth/: __init__.py  login.py  logout.py  rename.py  repwd.py  verify_token.py
backend/app/api/v1/orders/: __init__.py  cancel.py  create.py  list.py  today.py
backend/app/api/v1/stores/: __init__.py  create.py  get_url.py  list.py  menu.py  orders.py  today.py  updata.py
backend/app/core/: jwt_manager.py  lock_service.py  notify.py  password.py  scheduler.py  url_changer.py
backend/app/database/: session.py
backend/app/database/models/: __init__.py  order.py  store.py  user.py
backend/app/schema/v1/auth/: login.py  logout.py  rename.py  repwd.py  verify_token.py
backend/app/schema/v1/orders/: create.py  list.py
backend/app/schema/v1/stores/: __init__.py  create.py  get_url.py  list.py  menu.py  orders.py  today.py  update.py
backend/app/utils/: logger.py
frontend/class-lunch-web/: README.md  components.d.ts  package-lock.json  package.json  vite.config.ts
frontend/class-lunch-web/src/: App.vue  main.ts
frontend/class-lunch-web/src/components/: BackButton.vue
(+8 files in other folders)
